fix test failed